# docs/swagger.json
@@ -517,12 +517,16 @@
             "type": "object",
             "properties": {
                 "address": {
-                    "type": "string"
+                    "type": "object",
+                    "additionalProperties": {}
                 },
                 "contact_info": {
                     "type": "string"
                 },
                 "created_at": {
+                    "type": "string"
+                },
+                "formatted_address": {
                     "type": "string"
                 },
                 "id": {
@@ -681,7 +685,8 @@
             "type": "object",
             "properties": {
                 "address": {
-                    "type": "string"
+                    "type": "object",
+                    "additionalProperties": {}
                 },
                 "contact_info": {
                     "type": "string"
